--- a/index.html
+++ b/index.html
@@ -170,11 +170,13 @@
 
       <!-- 과정 카드 캐러셀 섹션 -->
       <section class="course-carousel">
-
         <div class="carousel">
             <div class="carousel-inner">
                 <div class="card active">
                     <div class="card-content">
+                        <div class="card-image">
+                            <img src="./aionbook_theme/images/home/card01.png"/>
+                        </div>
                         <h2>1. THE! 인공지능</h2>
                         <p>인공지능을 처음 시작하는 분들을 위한 코스</p>
                         <a href="https://school.coding-x.com/course/1" class="button">코스 시작</a>
@@ -182,6 +184,9 @@
                 </div>
                 <div class="card">
                     <div class="card-content">
+                        <div class="card-image">
+                        <img src="./aionbook_theme/images/home/card02.png"/>
+                        </div>
                         <h2>2. 인공지능을 위한 파이썬</h2>
                         <p>인공지능을 위한 파이썬 기초 학습</p>
                         <a href="https://school.coding-x.com/course/2" class="button">코스 시작</a>
@@ -189,6 +194,9 @@
                 </div>
                 <div class="card">
                     <div class="card-content">
+                        <div class="card-image">
+                        <img src="./aionbook_theme/images/home/card03.png"/>
+                        </div>
                         <h2>3. 데이터 분석 기초</h2>
                         <p>데이터 분석의 기본 개념과 도구 학습</p>
                         <a href="https://school.coding-x.com/course/3" class="button">코스 시작</a>
@@ -196,6 +204,7 @@
                 </div>
                 <div class="card locked">
                     <div class="card-content">
+                        <div class="card-image"></div>
                         <h2>4. 머신러닝 입문</h2>
                         <p>머신러닝의 기본 알고리즘과 응용</p>
                         <a href="https://school.coding-x.com/course/4" class="button">코스 시작</a>
@@ -203,6 +212,7 @@
                 </div>
                 <div class="card locked">
                     <div class="card-content">
+                        <div class="card-image"></div>
                         <h2>5. 머신러닝 알고리즘</h2>
                         <p>기계가 학습을 하는 방법</p>
                         <a href="https://school.coding-x.com/course/5" class="button">코스 시작</a>
@@ -210,6 +220,7 @@
                 </div>
                 <div class="card locked">
                     <div class="card-content">
+                        <div class="card-image"></div>
                         <h2>6. 머신러닝의 흐름</h2>
                         <p>시작부터 끝까지 실습하는 머신러닝</p>
                         <a href="https://school.coding-x.com/course/6" class="button">코스 시작</a>
@@ -217,6 +228,7 @@
                 </div>
                 <div class="card locked">
                     <div class="card-content">
+                        <div class="card-image"></div>
                         <h2>7. 딥러닝(개발중)</h2>
                         <p>인공 신경망의 개념을 기초부터 학습합니다.<p>
                         <a href="https://school.coding-x.com/course/6" class="button">코스 시작</a>
