--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@
         </div>
       </section>
 
-
       <section class="learning-system">
         <div class="learning-system__inner">
           <h3 class="learning-system__title">
@@ -168,25 +167,27 @@
         </div>
       </section>
 
-      <!-- 과정 카드 캐러셀 섹션 -->
-      <section class="course-carousel">
-        <div class="carousel">
-            <div class="carousel-inner">
-                <div class="card active">
-                    <div class="card-content">
-                        <div class="card-image">
-                            <img src="./aionbook_theme/images/home/card01.png"/>
-                        </div>
-                        <h2>1. THE! 인공지능</h2>
-                        <p>인공지능을 처음 시작하는 분들을 위한 코스</p>
-                        <a href="https://school.coding-x.com/course/1" class="button">코스 시작</a>
-                    </div>
-                </div>
+      <!-- 코스시작 카드 섹션 -->
+      <section class="course-grid">
+        <h3 class="course-grid__title">
+          미래를 비추는 AI OnBook
+        </h3>
+        <div class="course-grid__container">
+          <!-- card01 카드시작 -->
+          <div class="card">
+            <div class="card-content">
+              <div class="card-image">
+                <img src="./aionbook_theme/images/home/card01.png" alt="THE! 인공지능"/>
+              </div>
+              <h2>1. THE! 인공지능</h2>
+              <p>인공지능을 처음 시작하는 분들을 위한 코스</p>
+              <a href="https://school.coding-x.com/course/1" class="button">코스 시작</a>
+            </div>
+          </div>
                 <div class="card">
                     <div class="card-content">
                         <div class="card-image">
-                        <img src="./aionbook_theme/images/home/card02.png"/>
-                        </div>
+                        <img src="./aionbook_theme/images/home/card02.png"/></div>
                         <h2>2. 인공지능을 위한 파이썬</h2>
                         <p>인공지능을 위한 파이썬 기초 학습</p>
                         <a href="https://school.coding-x.com/course/2" class="button">코스 시작</a>
@@ -197,48 +198,42 @@
                         <div class="card-image">
                         <img src="./aionbook_theme/images/home/card03.png"/>
                         </div>
-                        <h2>3. 데이터 분석 기초</h2>
-                        <p>데이터 분석의 기본 개념과 도구 학습</p>
+                        <h2>3. 데이터 분석 입문</h2>
+                        <p>인공지능의 원료는 데이터!</p>
                         <a href="https://school.coding-x.com/course/3" class="button">코스 시작</a>
                     </div>
                 </div>
+                <!-- card04 부터 잠금 구현 -->
                 <div class="card locked">
                     <div class="card-content">
-                        <div class="card-image"></div>
-                        <h2>4. 머신러닝 입문</h2>
-                        <p>머신러닝의 기본 알고리즘과 응용</p>
+                        <div class="card-image">
+                          <img src="./aionbook_theme/images/home/card04.png"/></div>
+                        <h2>4. 데이터 분석 활용</h2>
+                        <p>실제 분석 환경에서 데이터 분석을 학습</p>
                         <a href="https://school.coding-x.com/course/4" class="button">코스 시작</a>
                     </div>
                 </div>
                 <div class="card locked">
                     <div class="card-content">
-                        <div class="card-image"></div>
+                        <div class="card-image">
+                          <img src="./aionbook_theme/images/home/card05.png"/></div>
                         <h2>5. 머신러닝 알고리즘</h2>
                         <p>기계가 학습을 하는 방법</p>
                         <a href="https://school.coding-x.com/course/5" class="button">코스 시작</a>
                     </div>
                 </div>
-                <div class="card locked">
-                    <div class="card-content">
-                        <div class="card-image"></div>
-                        <h2>6. 머신러닝의 흐름</h2>
-                        <p>시작부터 끝까지 실습하는 머신러닝</p>
-                        <a href="https://school.coding-x.com/course/6" class="button">코스 시작</a>
-                    </div>
+            <div class="card locked">
+              <div class="card-content">
+                <div class="card-image">
+                  <img src="./aionbook_theme/images/home/card06.png" alt="머신러닝의 흐름"/>
                 </div>
-                <div class="card locked">
-                    <div class="card-content">
-                        <div class="card-image"></div>
-                        <h2>7. 딥러닝(개발중)</h2>
-                        <p>인공 신경망의 개념을 기초부터 학습합니다.<p>
-                        <a href="https://school.coding-x.com/course/6" class="button">코스 시작</a>
-                    </div>
-                </div>
+                <h2>6. 머신러닝의 흐름</h2>
+                <p>시작부터 끝까지 실습하는 머신러닝</p>
+                <a href="https://school.coding-x.com/course/6" class="button">코스 시작</a>
+              </div>
             </div>
-            <div class="arrow arrow-left">&lt;</div>
-            <div class="arrow arrow-right">&gt;</div>
-        </div>
-    </section>
+          </div>
+        </section>
 
       <!-- 한 번에 끝내는 AI 학습코스 섹션 -->
       <section class="learning-course" id="experience">
