--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./aionbook_theme/css/pages.css">
     <!-- 과정 카드 css추가 -->
     <link rel="stylesheet" href="./aionbook_theme/css/course.css">
+    <link rel="stylesheet" href="./aionbook_theme/css/learning.css">
     <title>OnBook AI</title>
         <meta name="description" content="OnBook AI">
     <meta property="og:type" content="website"> 
@@ -181,7 +182,7 @@
               </div>
               <h2>1. THE! 인공지능</h2>
               <p>인공지능을 처음 시작하는 분들을 위한 코스</p>
-              <a href="https://school.coding-x.com/course/1" class="button">코스 시작</a>
+              <a href="./class.html" class="button">코스 시작</a>
             </div>
           </div>
                 <div class="card">
