--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
             </h2>
             <p>최적화된 온라인 AI 교육 플랫폼</p>
             <div class="main__button-wrap">
-              <button type="button" class="hero-btn" onclick="location.href='#experience';">
+              <button type="button" class="hero-btn" id="experienceBtn" onclick="location.href='#experience';">
                 체험하기
               </button>
-              <button type="button" class="hero-btn hero-btn--black-bg" onclick="location.href='#inquiry';">
+              <button type="button" class="hero-btn hero-btn--white-bg" id="inquiryBtn" onclick="location.href='#inquiry';">
                 도입문의
               </button>
             </div>
           </div>
-          <img src="aionbook_theme/images/home/hero.png.png" alt="">
+          <img src="./aionbook_theme/images/home/hero.png.png" alt="OnBook AI 이미지">
         </div>
       </section>
 
