fix class.css grid gap

--- a/class.html
+++ b/class.html
@@ -91,6 +91,28 @@
                 <li>3. 다양한 파이썬의 라이브러리</li>
             </ul>
         </div>
+        <div class="chapter">
+            <img src="./aionbook_theme/images/class/chapter02.png" alt="Chapter 2" />
+            <h3>Chapter 2</h3>
+            <h4>인공지능 학습 시작하기</h4>
+            <ul>
+                <h3>Lesson </h3>
+                <li>1. 인공지능 나도 할 수 있을까?</li>
+                <li>2. AI를 위한 최고의 도구 파이썬</li>
+                <li>3. 다양한 파이썬의 라이브러리</li>
+            </ul>
+        </div>
+        <div class="chapter">
+            <img src="./aionbook_theme/images/class/chapter02.png" alt="Chapter 2" />
+            <h3>Chapter 2</h3>
+            <h4>인공지능 학습 시작하기</h4>
+            <ul>
+                <h3>Lesson </h3>
+                <li>1. 인공지능 나도 할 수 있을까?</li>
+                <li>2. AI를 위한 최고의 도구 파이썬</li>
+                <li>3. 다양한 파이썬의 라이브러리</li>
+            </ul>
+        </div>
     </section>
 </body>
 </html>
