add circle.css learning system

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- 과정 카드 css추가 -->
     <link rel="stylesheet" href="./aionbook_theme/css/course.css">
     <link rel="stylesheet" href="./aionbook_theme/css/learning.css">
+    <link rel="stylesheet" href="./aionbook_theme/css/circle.css">
     <title>OnBook AI</title>
         <meta name="description" content="OnBook AI">
     <meta property="og:type" content="website"> 
@@ -112,20 +113,38 @@
               OnBook AI
             </h2>
             <p>최적화된 온라인 AI 교육 플랫폼</p>
-            <div class="main__button-wrap">
-              <button type="button" class="hero-btn" id="experienceBtn" onclick="location.href='#experience';">
-                체험하기
-              </button>
-              <button type="button" class="hero-btn hero-btn--white-bg" id="inquiryBtn" onclick="location.href='#inquiry';">
-                도입문의
-              </button>
-            </div>
+
           </div>
           <img src="./aionbook_theme/images/home/hero.png.png" alt="OnBook AI 이미지">
         </div>
+        <div class="main__button-wrap">
+          <button type="button" class="hero-btn" id="experienceBtn" onclick="location.href='#experience';">
+            체험하기
+          </button>
+          <button type="button" class="hero-btn hero-btn--white-bg" id="inquiryBtn" onclick="location.href='#inquiry';">
+            도입문의
+          </button>
+        </div>
       </section>
 
-      <section class="learning-system">
+            <!-- 한 번에 끝내는 AI 학습체계 (ver.Circle) -->
+            <section class="learning-circle">
+              <div class="learning-circle-inner">
+              <img src="./aionbook_theme/images/home/circle.png" alt="learning system circle" class="circle-main">
+              <div class="circle-text">
+                <h3>어렵게만 느껴지는 AI?</h3>
+                <p>한 번에 끝내는 AI 학습체계</p>
+            </div>
+            <div class="circlulating" >
+              <img src="./aionbook_theme/images/home/orange.png" alt="learning system orange" class="circle orange">
+              <img src="./aionbook_theme/images/home/green.png" alt="learning system green" class="circle green">
+              <img src="./aionbook_theme/images/home/pink.png" alt="learning system pink" class="circle pink">
+              <img src="./aionbook_theme/images/home/blue.png" alt="learning system blue" class="circle blue">
+            </div>
+            </div>
+          </section>
+      <!-- 한 번에 끝내는 AI 학습체계 (ver. Card) -->
+      <!-- <section class="learning-system">
         <div class="learning-system__inner">
           <h3 class="learning-system__title">
             한 번에 끝내는 AI 학습체계
@@ -166,7 +185,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- 코스시작 카드 섹션 -->
       <section class="course-grid">
