--- a/aionbook/index.html
+++ b/aionbook/index.html
@@ -5,13 +5,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./aionbook_theme/css/common.css">
-    <link rel="stylesheet" href="./aionbook_theme/css/components.css">
-    <link rel="stylesheet" href="./aionbook_theme/css/pages.css">
+
+    <link rel="stylesheet" href="https://onbook.codingx.ai/assets/aionbook_theme/css/common.css">
+    <link rel="stylesheet" href="https://onbook.codingx.ai/assets/aionbook_theme/css/components.css">
+    <link rel="stylesheet" href="https://onbook.codingx.ai/assets/aionbook_theme/css/pages.css">
+
     <!-- 과정 카드 css추가 -->
-    <link rel="stylesheet" href="./aionbook_theme/css/course.css">
-    <link rel="stylesheet" href="./aionbook_theme/css/learning.css">
-    <link rel="stylesheet" href="./aionbook_theme/css/circle.css">
+    <link rel="stylesheet" href="../aionbook_theme/css/coursegrid.css">
+    <link rel="stylesheet" href="../aionbook_theme/css/learning.css">
+    <link rel="stylesheet" href="../aionbook_theme/css/circle.css">
+    <link rel="stylesheet" href="../aionbook_theme/css/chaptercontent.css">
+
     <title>OnBook AI</title>
         <meta name="description" content="OnBook AI">
     <meta property="og:type" content="website"> 
@@ -21,7 +25,7 @@
     <meta property="og:url" content="http://onbook.codingx.ai">
         <link rel="shortcut icon" type="image/x-icon" href="/assets/aionbook_theme/favicon.ico">
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> -->
-    <script src="./aionbook_theme/js/script.js" defer></script>
+    <script src="../aionbook_theme/js/script.js" defer></script>
 </head> 
 
 <body>
@@ -115,7 +119,7 @@
             <p>최적화된 온라인 AI 교육 플랫폼</p>
 
           </div>
-          <img src="./aionbook_theme/images/home/hero.png.png" alt="OnBook AI 이미지">
+          <img src="../aionbook_theme/images/home/hero.png.png" alt="OnBook AI 이미지">
         </div>
         <div class="main__button-wrap">
           <button type="button" class="hero-btn" id="experienceBtn" onclick="location.href='#experience';">
@@ -130,16 +134,16 @@
             <!-- 한 번에 끝내는 AI 학습체계 (ver.Circle) -->
             <section class="learning-circle">
               <div class="learning-circle-inner">
-              <img src="./aionbook_theme/images/home/circle.png" alt="learning system circle" class="circle-main">
+              <img src="../aionbook_theme/images/home/circle.png" alt="learning system circle" class="circle-main">
               <div class="circle-text">
                 <h3>어렵게만 느껴지는 AI?</h3>
                 <p>한 번에 끝내는 AI 학습체계</p>
             </div>
             <div class="circlulating" >
-              <img src="./aionbook_theme/images/home/orange.png" alt="learning system orange" class="circle orange">
-              <img src="./aionbook_theme/images/home/green.png" alt="learning system green" class="circle green">
-              <img src="./aionbook_theme/images/home/pink.png" alt="learning system pink" class="circle pink">
-              <img src="./aionbook_theme/images/home/blue.png" alt="learning system blue" class="circle blue">
+              <img src="../aionbook_theme/images/home/orange.png" alt="learning system orange" class="circle orange">
+              <img src="../aionbook_theme/images/home/green.png" alt="learning system green" class="circle green">
+              <img src="../aionbook_theme/images/home/pink.png" alt="learning system pink" class="circle pink">
+              <img src="../aionbook_theme/images/home/blue.png" alt="learning system blue" class="circle blue">
             </div>
             </div>
           </section>
@@ -197,17 +201,17 @@
           <div class="card">
             <div class="card-content">
               <div class="card-image">
-                <img src="./aionbook_theme/images/home/card01.png" alt="THE! 인공지능"/>
+                <img src="../aionbook_theme/images/home/card01.png" alt="THE! 인공지능"/>
               </div>
               <h2>1. THE! 인공지능</h2>
               <p>인공지능을 처음 시작하는 분들을 위한 코스</p>
-              <a href="./class.html" class="button">코스 시작</a>
+              <a href="class.html" class="button">코스 시작</a>
             </div>
           </div>
                 <div class="card">
                     <div class="card-content">
                         <div class="card-image">
-                        <img src="./aionbook_theme/images/home/card02.png"/></div>
+                        <img src="../aionbook_theme/images/home/card02.png"/></div>
                         <h2>2. 인공지능을 위한 파이썬</h2>
                         <p>인공지능을 위한 파이썬 기초 학습</p>
                         <a href="https://school.coding-x.com/course/2" class="button">코스 시작</a>
@@ -216,7 +220,7 @@
                 <div class="card">
                     <div class="card-content">
                         <div class="card-image">
-                        <img src="./aionbook_theme/images/home/card03.png"/>
+                        <img src="../aionbook_theme/images/home/card03.png"/>
                         </div>
                         <h2>3. 데이터 분석 입문</h2>
                         <p>인공지능의 원료는 데이터!</p>
@@ -227,7 +231,7 @@
                 <div class="card locked">
                     <div class="card-content">
                         <div class="card-image">
-                          <img src="./aionbook_theme/images/home/card04.png"/></div>
+                          <img src="../aionbook_theme/images/home/card04.png"/></div>
                         <h2>4. 데이터 분석 활용</h2>
                         <p>실제 분석 환경에서 데이터 분석을 학습</p>
                         <a href="https://school.coding-x.com/course/4" class="button">코스 시작</a>
@@ -236,7 +240,7 @@
                 <div class="card locked">
                     <div class="card-content">
                         <div class="card-image">
-                          <img src="./aionbook_theme/images/home/card05.png"/></div>
+                          <img src="../aionbook_theme/images/home/card05.png"/></div>
                         <h2>5. 머신러닝 알고리즘</h2>
                         <p>기계가 학습을 하는 방법</p>
                         <a href="https://school.coding-x.com/course/5" class="button">코스 시작</a>
@@ -245,7 +249,7 @@
             <div class="card locked">
               <div class="card-content">
                 <div class="card-image">
-                  <img src="./aionbook_theme/images/home/card06.png" alt="머신러닝의 흐름"/>
+                  <img src="../aionbook_theme/images/home/card06.png" alt="머신러닝의 흐름"/>
                 </div>
                 <h2>6. 머신러닝의 흐름</h2>
                 <p>시작부터 끝까지 실습하는 머신러닝</p>
@@ -273,7 +277,7 @@
                   <button class="learning-course__btn"><a href="course_intro/open_onbook/1">체험하기</a></button>
                 </div>
                 <div class="learning-course__image">
-                  <img src="./aionbook_theme/images/home/main_1.png" alt="데이터분석 Basic">
+                  <img src="../aionbook_theme/images/home/main_1.png" alt="데이터분석 Basic">
                 </div>
               </div>
             </li>
@@ -289,7 +293,7 @@
                   </button>
                 </div>
                 <div class="learning-course__image">
-                  <img src="./aionbook_theme/images/home/main_2.png" alt="데이터분석 Advanced">
+                  <img src="../aionbook_theme/images/home/main_2.png" alt="데이터분석 Advanced">
                 </div>
               </div>
             </li>
@@ -304,7 +308,7 @@
                   </button>
                 </div>
                 <div class="learning-course__image">
-                  <img src="./aionbook_theme/images/home/main_3.png" alt="머신러닝">
+                  <img src="../aionbook_theme/images/home/main_3.png" alt="머신러닝">
                 </div>
               </div>
             </li>
@@ -319,7 +323,7 @@
                   </button>
                 </div>
                 <div class="learning-course__image">
-                  <img src="./aionbook_theme/images/home/main_4.png" alt="딥러닝">
+                  <img src="../aionbook_theme/images/home/main_4.png" alt="딥러닝">
                 </div>
               </div>
             </li>
@@ -334,7 +338,7 @@
                   </button>
                 </div>
                 <div class="learning-course__image">
-                  <img src="./aionbook_theme/images/home/main_5.png" alt=DT역량진단">
+                  <img src="../aionbook_theme/images/home/main_5.png" alt=DT역량진단">
                 </div>
               </div>
             </li>
