fix learning system

--- a/aionbook/index.html
+++ b/aionbook/index.html
@@ -111,15 +111,7 @@
 
       <section class="main">
         <div class="main__inner">
-          <div class="main__text">
-            <h2 class="main__title">
-              모두의 AI<br />
-              OnBook AI
-            </h2>
-            <p>최적화된 온라인 AI 교육 플랫폼</p>
-
-          </div>
-          <img src="../aionbook_theme/images/home/hero.png.png" alt="OnBook AI 이미지">
+          <img src="../aionbook_theme/images/home/herobn.png" alt="OnBook AI 이미지">
         </div>
         <div class="main__button-wrap">
           <button type="button" class="hero-btn" id="experienceBtn" onclick="location.href='#experience';">
