fix allign for contents grid

--- a/aionbook/indexbackup.html
+++ b/aionbook/indexbackup.html
@@ -124,7 +124,7 @@
       </section>
 
             <!-- 한 번에 끝내는 AI 학습체계 (ver.Circle) -->
-            <!-- <section class="learning-circle">
+            <section class="learning-circle">
               <div class="learning-circle-inner">
               <img src="../aionbook_theme/images/home/circle.png" alt="learning system circle" class="circle-main">
               <div class="circle-text">
@@ -138,17 +138,16 @@
               <img src="../aionbook_theme/images/home/blue.png" alt="learning system blue" class="circle blue">
             </div>
             </div>
-          </section> -->
-      <!-- AI 온북 플랫폼의 특징 (ver. Card) -->
-      <section class="learning-system">
+          </section>
+      <!-- 한 번에 끝내는 AI 학습체계 (ver. Card) -->
+      <!-- <section class="learning-system">
         <div class="learning-system__inner">
           <h3 class="learning-system__title">
-            AI 온북 플랫폼의 특징
+            한 번에 끝내는 AI 학습체계
           </h3>
           <ul class="learning-system__list">
             <li class="learning-system__item">
-              <!-- <span class="chip chip--green">이론</span> -->
-               <span class="platform_number">1</span>
+              <span class="chip chip--green">이론</span>
               <div class="learning-system__text">
                 <p>
                   사전 테스트
@@ -180,20 +179,9 @@
               </span>
               </div>
             </li>
-            <li class="learning-system__item">
-              <span class="chip chip--green">이론</span>
-              <div class="learning-system__text">
-                <p>
-                  사전 테스트
-                </p>
-                <span>
-                학습 전 수준 평가
-              </span>
-              </div>
-            </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- 코스시작 카드 섹션 -->
       <section class="course-grid">
