--- a/aionbook/class.html
+++ b/aionbook/class.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="../aionbook_theme/css/chaptercontent.css">
 
     <title>OnBook AI</title>
-</head>
+    <!-- 체크버튼 기능 -->
+    <script src="../aionbook_theme/js/script.js" defer></script>
+</head> 
 <body>
     <section class="basic-class">
         <h1>THE! 인공지능</h1>
@@ -50,69 +52,197 @@
     
     <section class="chapter-grid">
         <div class="chapter">
-            <img src="../aionbook_theme/images/class/chapter01.png" alt="Chapter 1" />
+            <div class="chapter-img">
+                <img src="../aionbook_theme/images/class/chapter01.png" alt="Chapter 1" />
+            </div>
             <h3>Chapter 1</h3>
-            <h4>인공지능 알아보기</h4>
+            <h4>파이썬의 시작</h4>
             <ul>
                 <h3>Lesson </h3>
-                <li>1. 인공지능이 뭘까?</li>
-                <li>2. 인공지능의 성격</li>
-                <li>3. 생활 속의 인공지능</li>
+                <li>
+                    <span>1. 컴퓨터와 대화하는 방법</span>
+                    <div class="check-button"></div>
+                </li>
+                <li>
+                    <span>2. 파이썬의 역사와 특징</span>
+                    <div class="check-button"></div>
+                </li>
+                <li>
+                    <span>3. 파이썬 어떻게 공부할까?</span>
+                    <div class="check-button"></div>
+                </li>
             </ul>
         </div>
         <div class="chapter">
-            <img src="../aionbook_theme/images/class/chapter02.png" alt="Chapter 2" />
+            <div class="chapter-img">
+                <img src="../aionbook_theme/images/class/chapter02.png" alt="Chapter 2" />
+            </div>
             <h3>Chapter 2</h3>
             <h4>인공지능 학습 시작하기</h4>
             <ul>
                 <h3>Lesson </h3>
-                <li>1. 인공지능 나도 할 수 있을까?</li>
-                <li>2. AI를 위한 최고의 도구 파이썬</li>
-                <li>3. 다양한 파이썬의 라이브러리</li>
+                <li>
+                    <span>1. 코딩엑스 에디터</span>
+                    <div class="check-button"></div>
+                </li>
+                <li>
+                    <span>2. 주석과 메모</span>
+                    <div class="check-button"></div>
+                </li>
             </ul>
         </div>
         <div class="chapter">
-            <img src="../aionbook_theme/images/class/chapter02.png" alt="Chapter 2" />
-            <h3>Chapter 2</h3>
+            <div class="chapter-img">
+                <img src="../aionbook_theme/images/class/chapter03.png" alt="Chapter 3" />
+            </div>
+            <h3>Chapter 3</h3>
             <h4>인공지능 학습 시작하기</h4>
             <ul>
                 <h3>Lesson </h3>
-                <li>1. 인공지능 나도 할 수 있을까?</li>
-                <li>2. AI를 위한 최고의 도구 파이썬</li>
-                <li>3. 다양한 파이썬의 라이브러리</li>
+                <li>
+                    <span>1. 화면에 표시하는 출력:print</span>
+                    <div class="check-button"></div>
+                </li>
+                <li>
+                    <span>2. 할당하기:`=`</span>
+                    <div class="check-button"></div>
+                </li>
+                <li>
+                    <span>3. 문자열과 따옴표</span>
+                    <div class="check-button"></div>
+                </li>
             </ul>
         </div>
         <div class="chapter">
-            <img src="../aionbook_theme/images/class/chapter02.png" alt="Chapter 2" />
-            <h3>Chapter 2</h3>
-            <h4>인공지능 학습 시작하기</h4>
+            <div class="chapter-img">
+                <img src="../aionbook_theme/images/class/chapter04.png" alt="Chapter 4" />
+            </div>
+            <h3>Chapter 4</h3>
+            <h4>수학? 파이썬!</h4>
             <ul>
                 <h3>Lesson </h3>
-                <li>1. 인공지능 나도 할 수 있을까?</li>
-                <li>2. AI를 위한 최고의 도구 파이썬</li>
-                <li>3. 다양한 파이썬의 라이브러리</li>
+                <li>
+                    <span>1. 사칙연산</span>
+                    <div class="check-button"></div>
+                </li>
+                <li>
+                    <span>2. 연산과 할당</span>
+                    <div class="check-button"></div>
+                </li>
+                <li>
+                    <span>3. 숫자를 다루는 간단한 함수</span>
+                    <div class="check-button"></div>
+                </li>
             </ul>
         </div>
-        <div class="chapter">
-            <img src="../aionbook_theme/images/class/chapter02.png" alt="Chapter 2" />
-            <h3>Chapter 2</h3>
-            <h4>인공지능 학습 시작하기</h4>
+        <div class="chapter locked">
+            <div class="chapter-img">
+                <img src="../aionbook_theme/images/class/chapter05.png" alt="Chapter 5" />
+            </div>
+            <h3>Chapter 5</h3>
+            <h4>변수와 데이터</h4>
             <ul>
                 <h3>Lesson </h3>
-                <li>1. 인공지능 나도 할 수 있을까?</li>
-                <li>2. AI를 위한 최고의 도구 파이썬</li>
-                <li>3. 다양한 파이썬의 라이브러리</li>
+                <li>
+                    <span>1. 변수의 이름을 지어보자</span>
+                    <div class="check-button"></div>
+                </li>
+                <li>
+                    <span>2. 데이터의 여러가지 타입</span>
+                    <div class="check-button"></div>
+                </li>
+                <li>
+                    <span>3. 데이터 들여다보기 - 숫자</span>
+                    <div class="check-button"></div>
+                </li>
             </ul>
         </div>
-        <div class="chapter">
-            <img src="../aionbook_theme/images/class/chapter02.png" alt="Chapter 2" />
-            <h3>Chapter 2</h3>
-            <h4>인공지능 학습 시작하기</h4>
+        <div class="chapter locked">
+            <div class="chapter-img">
+                <img src="../aionbook_theme/images/class/chapter06.png" alt="Chapter 6" />
+            </div>
+            <h3>Chapter 6</h3>
+            <h4>문자열 포매팅</h4>
             <ul>
                 <h3>Lesson </h3>
-                <li>1. 인공지능 나도 할 수 있을까?</li>
-                <li>2. AI를 위한 최고의 도구 파이썬</li>
-                <li>3. 다양한 파이썬의 라이브러리</li>
+                <li>
+                    <span>1. 포매팅 - format()</span>
+                    <div class="check-button"></div>
+                </li>
+                <li>
+                    <span>2. 포매팅 - 서식지정자 %</span>
+                    <div class="check-button"></div>
+                </li>
+                <li>
+                    <span></span>
+                    <div class="check-button"></div>
+                </li>
+            </ul>
+        </div>
+        <div class="chapter locked">
+            <div class="chapter-img">
+                <img src="../aionbook_theme/images/class/chapter07.png" alt="Chapter 7" />
+            </div>
+            <h3>Chapter 7</h3>
+            <h4>컬렉션 데이터</h4>
+            <ul>
+                <h3>Lesson </h3>
+                <li>
+                    <span>1. 리스트 list</span>
+                    <div class="check-button"></div>
+                </li>
+                <li>
+                    <span>2. 리스트의 수정</span>
+                    <div class="check-button"></div>
+                </li>
+                <li>
+                    <span>3. 튜플 tuple</span>
+                    <div class="check-button"></div>
+                </li>
+            </ul>
+        </div>
+        <div class="chapter locked">
+            <div class="chapter-img">
+                <img src="../aionbook_theme/images/class/chapter08.png" alt="Chapter 8" />
+            </div>
+            <h3>Chapter 8</h3>
+            <h4>조건과 반복</h4>
+            <ul>
+                <h3>Lesson </h3>
+                <li>
+                    <span>1. 조건에 따라 다른 반응</span>
+                    <div class="check-button"></div>
+                </li>
+                <li>
+                    <span>2. 동작을 반복해주는 함수</span>
+                    <div class="check-button"></div>
+                </li>
+                <li>
+                    <span></span>
+                    <div class="check-button"></div>
+                </li>
+            </ul>
+        </div>
+        <div class="chapter locked">
+            <div class="chapter-img">
+                <img src="../aionbook_theme/images/class/chapter09.png" alt="Chapter 9" />
+            </div>
+            <h3>Chapter 9</h3>
+            <h4>함수에 대해</h4>
+            <ul>
+                <h3>Lesson </h3>
+                <li>
+                    <span>1. 함수의 종류</span>
+                    <div class="check-button"></div>
+                </li>
+                <li>
+                    <span>2. 사용자 정의 함수의 활용</span>
+                    <div class="check-button"></div>
+                </li>
+                <li>
+                    <span></span>
+                    <div class="check-button"></div>
+                </li>
             </ul>
         </div>
     </section>
