fix  mainsignup.html mainsignup.css

--- a/aionbook/mainsignup1.html
+++ b/aionbook/mainsignup1.html
@@ -104,9 +104,9 @@
               <div class="mainsignup1_title">회원가입</div>
               <div class="step-indicator">
                 <div class="mainsignup1_title_number active">1</div>
-                <div>약관동의</div>
+                <div class="mainsignup1_title_text active">약관동의</div>
                 <div class="mainsignup1_title_number">2</div>
-                <div>정보입력</div>
+                <div class="mainsignup1_title_text">정보입력</div>
               </div>
           
               <div class="mainsignup1_text1">
