--- a/aionbook/mainsignup2.html
+++ b/aionbook/mainsignup2.html
@@ -7,10 +7,16 @@
         <link rel="stylesheet" href="https://onbook.codingx.ai/assets/aionbook_theme/css/common.css">
         <link rel="stylesheet" href="https://onbook.codingx.ai/assets/aionbook_theme/css/components.css">
         <link rel="stylesheet" href="https://onbook.codingx.ai/assets/aionbook_theme/css/pages.css">
+        <!-- 과정 카드 css추가 -->
+        <link rel="stylesheet" href="../aionbook_theme/css/coursegrid.css">
+        <link rel="stylesheet" href="../aionbook_theme/css/learning.css">
+        <link rel="stylesheet" href="../aionbook_theme/css/circle.css">
+        <link rel="stylesheet" href="../aionbook_theme/css/chaptercontent.css">
+
+        <!-- 로그인화면 CSS -->
+        <link rel="stylesheet" href="../aionbook_theme/css/mainlogin.css">
         <!-- 회원가입화면 1 약관동의 CSS -->
         <link rel="stylesheet" href="../aionbook_theme/css/mainsignup1.css">
-
-        <!-- 회원가입화면 2 정보기입 CSS -->
         <link rel="stylesheet" href="../aionbook_theme/css/mainsignup2.css">
         <title>OnBook AI</title>
             <meta name="description" content="OnBook AI">
@@ -113,6 +119,7 @@
                 <div class="form-group">
                     <label class="form-label">비밀번호</label>
                     <input type="password" class="form-input" placeholder="비밀번호를 입력해주세요">
+                    <p>*영문,숫자,특수문자 조합 8-20자를 입력해주세요.</p>
                 </div>
 
                 <div class="form-group">
@@ -132,15 +139,15 @@
                 <div class="form-group">
                     <label class="form-label">성별</label>
                     <div class="gender-group">
-                        <div class="gender-option">남성</div>
-                        <div class="gender-option">여성</div>
+                        <div class="form-input gender-option">남성</div>
+                        <div class="form-input gender-option">여성</div>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label class="form-label">이메일</label>
                     <div class="email-group">
-                        <input type="text" class="form-input email-input">
+                        <input type="text" class="form-input email-input" placeholder="example">
                         <select class="form-input email-domain">
                             <option value="naver.com">naver.com</option>
                             <option value="gmail.com">gmail.com</option>
