add responsive screen media

--- a/aionbook/index.html
+++ b/aionbook/index.html
@@ -108,37 +108,22 @@
 
     <div class="desktop__inner">
 
+        <section class="main">
+          <div class="main__inner">
+            <img src="../aionbook_theme/images/home/herobn.png" alt="OnBook AI 이미지">
 
-      <section class="main">
-        <div class="main__inner">
-          <img src="../aionbook_theme/images/home/herobn.png" alt="OnBook AI 이미지">
+          <div class="main__button-wrap">
+            <button type="button" class="hero-btn hero-btn--experience" id="experienceBtn" onclick="location.href='#experience';">
+              체험하기
+            </button>
+            <button type="button" class="hero-btn hero-btn--inquiry" id="inquiryBtn" onclick="location.href='#inquiry';">
+              도입문의
+            </button>
+          </div>
         </div>
-        <div class="main__button-wrap">
-          <button type="button" class="hero-btn" id="experienceBtn" onclick="location.href='#experience';">
-            체험하기
-          </button>
-          <button type="button" class="hero-btn hero-btn--white-bg" id="inquiryBtn" onclick="location.href='#inquiry';">
-            도입문의
-          </button>
-        </div>
-      </section>
+        </section>
+      
 
-            <!-- 한 번에 끝내는 AI 학습체계 (ver.Circle) -->
-            <!-- <section class="learning-circle">
-              <div class="learning-circle-inner">
-              <img src="../aionbook_theme/images/home/circle.png" alt="learning system circle" class="circle-main">
-              <div class="circle-text">
-                <h3>어렵게만 느껴지는 AI?</h3>
-                <p>한 번에 끝내는 AI 학습체계</p>
-            </div>
-            <div class="circlulating" >
-              <img src="../aionbook_theme/images/home/orange.png" alt="learning system orange" class="circle orange">
-              <img src="../aionbook_theme/images/home/green.png" alt="learning system green" class="circle green">
-              <img src="../aionbook_theme/images/home/pink.png" alt="learning system pink" class="circle pink">
-              <img src="../aionbook_theme/images/home/blue.png" alt="learning system blue" class="circle blue">
-            </div>
-            </div>
-          </section> -->
       <!-- AI 온북 플랫폼의 특징 (ver. Card) -->
       <section class="learning-system">
         <div class="learning-system__inner">
