--- a/aionbook/indexbackup.html
+++ b/aionbook/indexbackup.html
@@ -108,16 +108,15 @@
 
     <div class="desktop__inner">
 
-
       <section class="main">
         <div class="main__inner">
           <img src="../aionbook_theme/images/home/herobn.png" alt="OnBook AI 이미지">
         </div>
         <div class="main__button-wrap">
-          <button type="button" class="hero-btn" id="experienceBtn" onclick="location.href='#experience';">
+          <button type="button" class="hero-btn hero-btn--experience" id="experienceBtn" onclick="location.href='#experience';">
             체험하기
           </button>
-          <button type="button" class="hero-btn hero-btn--white-bg" id="inquiryBtn" onclick="location.href='#inquiry';">
+          <button type="button" class="hero-btn hero-btn--inquiry" id="inquiryBtn" onclick="location.href='#inquiry';">
             도입문의
           </button>
         </div>
