--- a/aionbook/mainsignup3.html
+++ b/aionbook/mainsignup3.html
@@ -20,7 +20,8 @@
     <link rel="stylesheet" href="../aionbook_theme/css/mainlogin.css">
     <!-- 회원가입화면 1 약관동의 CSS -->
     <link rel="stylesheet" href="../aionbook_theme/css/mainsignup1.css">
-
+    <!-- 회원가입화면 3 로그인유도 CSS -->
+    <link rel="stylesheet" href="../aionbook_theme/css/mainsignup3.css">
     <title>OnBook AI</title>
         <meta name="description" content="OnBook AI">
     <meta property="og:type" content="website"> 
@@ -99,80 +100,14 @@
             </header>
           </div>
 
-          <div class="mainsignup1">
-            <section class="mainsignup1_inner">
-              <div class="mainsignup1_title">회원가입</div>
-              <div class="step-indicator">
-                <div class="mainsignup1_title_number active">1</div>
-                <div class="mainsignup1_title_text active">약관동의</div>
-                <div class="mainsignup1_title_number">2</div>
-                <div class="mainsignup1_title_text">정보입력</div>
-              </div>
-          
-              <div class="mainsignup1_text1">
-                <div class="check-button"></div>
-                <label for="agree_all"> 전체동의</label>
-                <h3 class="mainsignup1_text2">OnBook AI의 이용약관, 개인정보처리방침에 모두 동의합니다.</h3>
-              </div>
-              
-              <div class="mainsignup1_text1">
-                <div class="check-button"></div>
-                <label for="agree_terms"> 회원 이용약관 (필수)</label>
+          <div class="mainsignup3">
+            <section class="mainsignup3_inner">
+              <div class="mainsignup3_title">회원가입</div>
+                <div class="mainsignup3_text">
+                    회원가입이 완료되었습니다!<br>On Book이 학습을 열심히 도울게요.
                 </div>
-                <div class="mainsignup1_term box"> 
-                  <div class="term-content">
-                    <div class="term-content-text">제 1 장 총 칙<br>
-                    <br>제 1 조 [목적]<br>
-                    ① 본 약관은 더에이아이랩(이하 “회사”)가 사이트를 통하여 제공하는 교육정보서비스(이하“서비스”)의 이용과 관련하여 회사와 회원 사이에 권리·의무 및 책임 사항을 규정함을 목적으로 합니다.<br>
-                    ② 이용자는 회사가 정한 소정의 절차를 거쳐서 "동의함"을 체크 후 계속 단추를 누르면 본 약관에 동의하는 것으로 간주합니다. 본 약관에 정하는 이외의 이용자의 권리, 회사의 의무 및 책임사항에 관해서는 전기통신사업법 및 기타 대한민국의 관련 법령과 상관습에 의합니다.<br>
-                    <br>
-                    제 2 조 [정의]<br>
-                    <br>
-                    ① 이 약관에서 사용하는 용어는 다음과 같이 정의합니다.
-                    <br>
-                    "회사"란 재화 또는 용역을 이용자에게 제공하기 위하여 컴퓨터 등 정보통신설비를 이용하여 재화 또는 용역을 거래할 수 있도록 설정한 영업장을 말합니다.
-                    <br>
-                    ㆍ"회원"이라 함은 서비스를 제공받기 위해 회사의 약관에 동의하여 소정의 절차를 통해 가입하여 회원 아이디를 부여받은자를 말합니다.
-                    <br>
-                    ㆍ"아이디(ID)"라 함은 가입회원의 식별과 회원의 서비스 이용을 위해 고객이 선정하고 회사가 부여하는 문자와 숫자의 조합을 말합니다.
-                    <br>
-                    ㆍ"비밀번호(Password)"라 함은 회원이 부여받은아이디와 일치된 사용자임을 확인하고 회원의 권익보호를 위해 회원이 선정한 문자와 숫자의 조합을 말합니다.
-                    <br>
-                    ㆍ"이메일(E-mail)"이라 함은 인터넷을 통한 우편 혹은 전기적 매체를 이용한 우편을 말합니다.<br></div>
-                    </div>
-                </div>
-
-              <div class="mainsignup1_text1">
-                <div class="check-button"></div>
-                <label for="agree_privacy"> 개인정보처리방침 (필수)</label>
-                </div>
-                <div class="mainsignup1_term box"> 
-                  <div class="term-content">
-                    <div class="term-content-text">
-                      제 1 장 총 칙<br>
-                      <br>제 1 조 [목적]<br>
-                      ① 본 약관은 더에이아이랩(이하 “회사”)가 사이트를 통하여 제공하는 교육정보서비스(이하“서비스”)의 이용과 관련하여 회사와 회원 사이에 권리·의무 및 책임 사항을 규정함을 목적으로 합니다.<br>
-                      ② 이용자는 회사가 정한 소정의 절차를 거쳐서 "동의함"을 체크 후 계속 단추를 누르면 본 약관에 동의하는 것으로 간주합니다. 본 약관에 정하는 이외의 이용자의 권리, 회사의 의무 및 책임사항에 관해서는 전기통신사업법 및 기타 대한민국의 관련 법령과 상관습에 의합니다.<br>
-                      <br>
-                      제 2 조 [정의]<br>
-                      <br>
-① 이 약관에서 사용하는 용어는 다음과 같이 정의합니다.
-<br>
-"회사"란 재화 또는 용역을 이용자에게 제공하기 위하여 컴퓨터 등 정보통신설비를 이용하여 재화 또는 용역을 거래할 수 있도록 설정한 영업장을 말합니다.
-<br>
-ㆍ"회원"이라 함은 서비스를 제공받기 위해 회사의 약관에 동의하여 소정의 절차를 통해 가입하여 회원 아이디를 부여받은자를 말합니다.
-<br>
-ㆍ"아이디(ID)"라 함은 가입회원의 식별과 회원의 서비스 이용을 위해 고객이 선정하고 회사가 부여하는 문자와 숫자의 조합을 말합니다.
-<br>
-ㆍ"비밀번호(Password)"라 함은 회원이 부여받은아이디와 일치된 사용자임을 확인하고 회원의 권익보호를 위해 회원이 선정한 문자와 숫자의 조합을 말합니다.
-<br>
-ㆍ"이메일(E-mail)"이라 함은 인터넷을 통한 우편 혹은 전기적 매체를 이용한 우편을 말합니다.<br>
-                    </div>
-                  </div>
-                </div>
-
-                <a href="mainsignup2.html" class="signup_link">
-                  <button class="mainsignup1_btn">다음</button></a>
+                <a href="mainlogin.html" class="login_link">
+                  <button class="mainsignup3_btn">로그인하기</button></a>
             </section>
           </div> 
 
