fix media  mainsignup3.html,css

--- a/aionbook/mainsignup2.html
+++ b/aionbook/mainsignup2.html
@@ -168,18 +168,15 @@
                     <label class="form-label"></label>
                         <input type="text" class="form-input phoneverify-input">
                         <button type="button" class="verify-button">인증번호 확인</button>
-
-
-
                 <div class="consent-group">
                     <div class="consent-item">
                         <label class="form-label">수신동의[선택사항]</label>
                         <input type="checkbox" id="emailConsent">
-                        <label for="emailConsent">이메일 수신 동의</label>
+                        <label for="emailConsent"><div class="check-button"></div>이메일 수신 동의</label>
                     </div>
                     <div class="consent-item">
                         <input type="checkbox" id="smsConsent">
-                        <label for="smsConsent">SMS(문자메시지) 수신 동의</label>
+                        <label for="smsConsent"><div class="check-button"></div>SMS(문자메시지) 수신 동의</label>
                     </div>
                 </div>
                 <div class="bottom-button">
