--- a/aionbook/mainsignup2.html
+++ b/aionbook/mainsignup2.html
@@ -138,12 +138,12 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="form-label">성별</label>
-                    <div class="gender-group">
-                        <div class="form-input gender-option">남성</div>
-                        <div class="form-input gender-option">여성</div>
-                    </div>
-                </div>
+                  <label class="form-label">성별</label>
+                  <div class="gender-group">
+                      <div class="form-input gender-option" onclick="selectGender(this)">남성</div>
+                      <div class="form-input gender-option" onclick="selectGender(this)">여성</div>
+                  </div>
+              </div>
 
                 <div class="form-group">
                     <label class="form-label">이메일</label>
@@ -156,29 +156,39 @@
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <label class="form-label">휴대폰 번호</label>
-                    <div class="phone-group">
-                        <input type="text" class="form-input phone-input" placeholder="010">
-                        <input type="text" class="form-input phone-input">
-                        <input type="text" class="form-input phone-input">
-                        <button type="button" class="verify-button">인증번호 받기</button>
+                <div class="form-group verification-container">
+                  <label class="form-label">휴대폰 번호</label>
+                  <div class="verification-wrapper">
+                      <div class="phone-group">
+                          <input type="text" class="form-input phone-input" placeholder="010">
+                          <input type="text" class="form-input phone-input">
+                          <input type="text" class="form-input phone-input">
+                          <button type="button" class="verify-button">인증번호 받기</button>
+                      <!-- </div> -->
+                      <!-- <div class="verification-input-group"> -->
+                          <input type="text" class="form-input verification-input" placeholder="인증번호 6자리를 입력해주세요">
+                          <button type="button" class="verify-button">인증번호 확인</button>
+                      </div>
+                  </div>
+              </div>
+
+    <div class="consent-wrapper">
+                <label class="form-label">수신동의[선택사항]</label>
+                <div class="consent-container">
+                    <div class="consent-item">
+                        <div class="consent-checkbox-wrapper">
+                            <input type="checkbox" id="emailConsent">
+                            <label for="emailConsent">이메일 수신 동의</label>
+                        </div>
+                    </div>
+                    <div class="consent-item">
+                        <div class="consent-checkbox-wrapper">
+                            <input type="checkbox" id="smsConsent">
+                            <label for="smsConsent">SMS(문자메시지) 수신 동의</label>
+                        </div>
                     </div>
                 </div>
-                    <label class="form-label"></label>
-                        <input type="text" class="form-input phoneverify-input">
-                        <button type="button" class="verify-button">인증번호 확인</button>
-                <div class="consent-group">
-                    <div class="consent-item">
-                        <label class="form-label">수신동의[선택사항]</label>
-                        <input type="checkbox" id="emailConsent">
-                        <label for="emailConsent"><div class="check-button"></div>이메일 수신 동의</label>
-                    </div>
-                    <div class="consent-item">
-                        <input type="checkbox" id="smsConsent">
-                        <label for="smsConsent"><div class="check-button"></div>SMS(문자메시지) 수신 동의</label>
-                    </div>
-                </div>
+            </div>
                 <div class="bottom-button">
                 <button type="linkto" class="backto-button">이전</button>
                 <button type="submit" class="signup-button">회원가입</button>
