fix form  mainsignup2.html,css

--- a/aionbook/mainsignup2.html
+++ b/aionbook/mainsignup2.html
@@ -164,8 +164,8 @@
                           <input type="text" class="form-input phone-input">
                           <input type="text" class="form-input phone-input">
                           <button type="button" class="verify-button">인증번호 받기</button>
-                      <!-- </div> -->
-                      <!-- <div class="verification-input-group"> -->
+                      </div>
+                      <div class="verification-input-group">
                           <input type="text" class="form-input verification-input" placeholder="인증번호 6자리를 입력해주세요">
                           <button type="button" class="verify-button">인증번호 확인</button>
                       </div>
@@ -173,8 +173,9 @@
               </div>
 
     <div class="consent-wrapper">
-                <label class="form-label">수신동의[선택사항]</label>
+
                 <div class="consent-container">
+                  <label class="form-label">수신동의[선택사항]</label>
                     <div class="consent-item">
                         <div class="consent-checkbox-wrapper">
                             <input type="checkbox" id="emailConsent">
