pages 메인 플랫폼 추가

--- a/aionbook/index.html
+++ b/aionbook/index.html
@@ -138,54 +138,57 @@
       <section class="learning-system">
         <div class="learning-system__inner">
           <h3 class="learning-system__title">
-            AI 온북 플랫폼의 특징
+            AI 온북 플랫폼
           </h3>
           <ul class="learning-system__list">
+      <!-- 01 무설치 -->
             <li class="learning-system__item">
-              <!-- <span class="chip chip--green">이론</span> -->
-               <span class="platform_number">1</span>
+              <div class="plat1">
+                <img src="../aionbook_theme/images/home/onbookplat01.png" alt="온북 플랫폼 이미지01">
+              </div>
               <div class="learning-system__text">
-                <p>
-                  사전 테스트
-                </p>
-                <span>
-                학습 전 수준 평가
+                <p>무설치</p>
+                <span>별도의 설치없이<br>
+                  웹에서 바로 교육
               </span>
               </div>
             </li>
+       <!-- 02 실습형 -->
             <li class="learning-system__item">
-              <span class="chip chip--navy">학습</span>
+              <div class="plat2">
+                <img src="../aionbook_theme/images/home/onbookplat02.png" alt="온북 플랫폼 이미지02">
+              </div>
               <div class="learning-system__text">
-                <p>
-                  끊김없는 학습활동
-                </p>
-                <span>
-                모든 학습활동을 OnBook AI에서 진행할 수 있습니다.
+                <p>실습형</p>
+                <span>코드를 직접 입력하고<br>
+                  실행결과 바로 확인
               </span>
               </div>
             </li>
-            <li class="learning-system__item">
-              <span class="chip">평가</span>
-              <div class="learning-system__text">
-                <p>
-                  사후 테스트
-                </p>
-                <span>
-                학습 후 성취도 평가
-              </span>
-              </div>
-            </li>
-            <li class="learning-system__item">
-              <span class="chip chip--green">이론</span>
-              <div class="learning-system__text">
-                <p>
-                  사전 테스트
-                </p>
-                <span>
-                학습 전 수준 평가
-              </span>
-              </div>
-            </li>
+        <!-- 03 콘텐츠 탑재 -->
+        <li class="learning-system__item">
+          <div class="plat3">
+            <img src="../aionbook_theme/images/home/onbookplat03.png" alt="온북 플랫폼 이미지03">
+          </div>
+          <div class="learning-system__text">
+            <p>콘텐츠 탑재</p>
+            <span>각 클래스 별<br>
+              실력확인 문제까지 제공
+          </span>
+          </div>
+        </li>
+         <!-- 04 LMS 제공 -->
+         <li class="learning-system__item">
+          <div class="plat4">
+            <img src="../aionbook_theme/images/home/onbookplat04.png" alt="온북 플랫폼 이미지04">
+          </div>
+          <div class="learning-system__text">
+            <p>LMS 제공</p>
+            <span>교사의 학생 초대 및<br>
+              수강관리 기능 제공
+          </span>
+          </div>
+        </li>
           </ul>
         </div>
       </section>
