--- a/aionbook/index.html
+++ b/aionbook/index.html
@@ -196,7 +196,7 @@
       <!-- 코스시작 카드 섹션 -->
       <section class="course-grid">
         <h3 class="course-grid__title">
-          미래를 비추는 AI OnBook
+          AI 데이터 분석 입문
         </h3>
         <div class="course-grid__container">
           <!-- card01 카드시작 -->
