--- a/aionbook/index.html
+++ b/aionbook/index.html
@@ -54,9 +54,9 @@
               <a href="mainlogin.html" class="gnb__link">로그인</a>
             </div>
       
-            <div class="gnb__item gnb__item--border-btn">
+            <!-- <div class="gnb__item gnb__item--border-btn">
               <a href="javascript:alert('준비중 입니다.');" class="gnb__link">플립러닝</a>
-            </div>
+            </div> -->
           </div>
         </nav>
       </header>
@@ -90,9 +90,9 @@
               <a href="mainlogin.html" class="mobile-gnb__link">로그인</a>
             </div>
       
-            <div class="mobile-gnb__item">
+            <!-- <div class="mobile-gnb__item">
               <a href="javascript:alert('준비중 입니다.');" class="mobile-gnb__link">플립러닝</a>
-            </div>
+            </div> -->
           </div>
         </div>
       </header>
@@ -144,7 +144,7 @@
       <!-- 01 무설치 -->
             <li class="learning-system__item">
               <div class="plat1">
-                <img src="../aionbook_theme/images/home/onbookplat01.png" alt="온북 플랫폼 이미지01">
+                <img src="../aionbook_theme/images/home/onboolplat01.png" alt="온북 플랫폼 이미지01">
               </div>
               <div class="learning-system__text">
                 <p>무설치</p>
@@ -156,7 +156,7 @@
        <!-- 02 실습형 -->
             <li class="learning-system__item">
               <div class="plat2">
-                <img src="../aionbook_theme/images/home/onbookplat02.png" alt="온북 플랫폼 이미지02">
+                <img src="../aionbook_theme/images/home/onboolplat02.png" alt="온북 플랫폼 이미지02">
               </div>
               <div class="learning-system__text">
                 <p>실습형</p>
@@ -168,7 +168,7 @@
         <!-- 03 콘텐츠 탑재 -->
         <li class="learning-system__item">
           <div class="plat3">
-            <img src="../aionbook_theme/images/home/onbookplat03.png" alt="온북 플랫폼 이미지03">
+            <img src="../aionbook_theme/images/home/onboolplat03.png" alt="온북 플랫폼 이미지03">
           </div>
           <div class="learning-system__text">
             <p>콘텐츠 탑재</p>
@@ -180,7 +180,7 @@
          <!-- 04 LMS 제공 -->
          <li class="learning-system__item">
           <div class="plat4">
-            <img src="../aionbook_theme/images/home/onbookplat04.png" alt="온북 플랫폼 이미지04">
+            <img src="../aionbook_theme/images/home/onboolplat04.png" alt="온북 플랫폼 이미지04">
           </div>
           <div class="learning-system__text">
             <p>LMS 제공</p>
